--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -5,6 +5,7 @@
     position: sticky;
     top: 0px;
     padding: .5rem 0rem;
+    z-index: 1;
     .container{
         display: flex;
         align-items: center;
